// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormConfigMultimedia should allow setting a help text 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      Name
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <div
    className="protip"
  >
    <i
      className="fa fa-lightbulb-o"
    />
    <span>
      Some help text
    </span>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip>
      This property will be shown without the label.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip>
      This property will be shown using all the width available.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip>
      You won't be able to save a document if this property is empty.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip>
      This property will appear in the library cards as part of the basic info.
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        Style
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Contain",
            },
            Object {
              "_id": "cover",
              "name": "Cover",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          Contain
        </b>
         will show the entire media inside the container.
        <br />
        <b>
          Cover
        </b>
         will attempt to fill the container, using it's entire width.  In cards, cropping is likely to occur.
      </p>
    </div>
  </div>
</div>
`;

exports[`FormConfigMultimedia should hold show label, show in card and select card style type options by default 1`] = `
<div>
  <div
    className="form-group"
  >
    <label>
      Name
    </label>
    <Modeled(Connect(Field))
      model="template.data.properties[0].label"
    >
      <input
        className="form-control"
      />
    </Modeled(Connect(Field))>
  </div>
  <PropertyConfigOption
    label="Hide label"
    model="template.data.properties[0].noLabel"
  >
    <Tip>
      This property will be shown without the label.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Full width"
    model="template.data.properties[0].fullWidth"
  >
    <Tip>
      This property will be shown using all the width available.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Required property"
    model="template.data.properties[0].required"
  >
    <Tip>
      You won't be able to save a document if this property is empty.
    </Tip>
  </PropertyConfigOption>
  <PropertyConfigOption
    label="Show in cards"
    model="template.data.properties[0].showInCard"
  >
    <Tip>
      This property will appear in the library cards as part of the basic info.
    </Tip>
  </PropertyConfigOption>
  <div>
    <div
      className="form-group"
    >
      <label>
        Style
      </label>
      <Select
        model="template.data.properties[0].style"
        options={
          Array [
            Object {
              "_id": "contain",
              "name": "Contain",
            },
            Object {
              "_id": "cover",
              "name": "Cover",
            },
          ]
        }
        optionsLabel="name"
        optionsValue="_id"
      />
    </div>
    <div
      className="protip"
    >
      <p>
        <b>
          Contain
        </b>
         will show the entire media inside the container.
        <br />
        <b>
          Cover
        </b>
         will attempt to fill the container, using it's entire width.  In cards, cropping is likely to occur.
      </p>
    </div>
  </div>
</div>
`;
